Fixed wrongly aligned expand/collapse arrow on education itmes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1108,6 +1108,10 @@ th a {
   position: absolute;
 }
 
+.expand-collapse-pushed {
+  margin-right: -500px !important;
+}
+
 .expand-collapse-education-item {
   margin-left: -15px;
   padding-right: 0px !important;
